<resources>
    <string name="app_name">IArpg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">IA RPG</string>
    <string name="startButton">Jouer</string>
    <string name="character_creation">Création du personnage</string>
    <string name="character_create_instruction">Entrez un prompt décrivant votre personnage</string>
    <string name="generate">Générer</string>
    <string name="character_prompt_hint">Décrivez le personnage</string>
    <string name="explore_the_dungeon">Explorer le donjon</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
</resources>