<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.WelcomeFragment"
    android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#bbbbbb"
        android:padding="30dp"

        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:text="@string/character_creation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choisissez votre classe"
        android:padding="3dp"

        />

    <EditText
        android:id="@+id/characterClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:hint="Mage, Guerrier, Elfe, Voleur"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/character_create_instruction"
        android:padding="3dp"

        />

    <EditText
        android:id="@+id/characterPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:hint="@string/character_prompt_hint"
        />

    <Button

        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="24dp"
        android:textSize="14sp"
        android:text="@string/generate"

        />

    <TextView
        android:id="@+id/textZone"
        android:layout_width="380dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#bbbbbb"
        android:gravity="top|start"

        android:padding="30dp"
        android:scrollbars="vertical"
        android:text="@string/lorem_ipsum"
        android:textSize="20sp"
         />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="24dp"
        android:textSize="14sp"
        android:text="Commencer l'aventure"


        />



</LinearLayout>

</ScrollView>